--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                     <button class="btn btn-primary" type="submit">Search</button>
                 </form>
             </div>
-            <div class="col-9">
+
+            <div class="col-9" id="weather-section">
                 <!-- today's weather -->
-                <div class="row bg-light border border-dark mb-3" id="todays-weather" style="min-height: 12rem;">
-                </div>
+                <div class="row mb-3" id="todays-weather" style="min-height: 12rem;"></div>
                 <!-- 5-day forecast -->
-                <div class="row">
+                <!-- <div class="row">
                     <h5>5-Day Forecast:</h5>
-                    <div class="col" id="day-one">
-                        <div class="card text-white bg-dark" style="max-width: 12rem; min-height: 10rem;">Day 1</div>
+                    <div class="col">
+                        <div class="card text-white bg-dark" style="max-width: 12rem; min-height: 10rem;" id="day-one">Day 1</div>
                     </div>
                     <div class="col">
                         <div class="card text-white bg-dark" style="max-width: 12rem; min-height: 10rem;">Day 2</div>
@@ -56,7 +56,10 @@
                     <div class="col">
                         <div class="card text-white bg-dark" style="max-width: 12rem; min-height: 10rem;">Day 5</div>
                     </div>
-                </div>
+                </div> -->
+
+                <div class="row" id="forecast-row"></div>
+
             </div>
         </div>
     </div>
@@ -65,5 +68,3 @@
 </body>
 
 </html>
-
-${}
